<?xml version="1.0" encoding="utf-8"?>
<layout>

    <variable
        name="currentBean"
        type="com.example.jory.learningproject.model.CurrentWeatherBean" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_temp_high_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="sans-serif"
                    android:text="@string/label_high"
                    android:textColor="#000000"
                    android:textSize="@dimen/weather_info_key_size" />

                <ImageView
                    android:id="@+id/tv_temp_high_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/currnet_high_b" />

                <TextView
                    android:id="@+id/tv_temp_high_val"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="sans-serif-light"
                    android:text="@{currentBean.observation.metric.temp_max_24hour}"
                    android:textColor="#000000"
                    android:textSize="@dimen/weather_info_value_size" />

                <TextView
                    android:id="@+id/tv_temp_high_unit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="sans-serif"
                    android:text="@string/label_temp_unit_celsius"
                    android:textColor="#99000000"
                    android:textSize="@dimen/weather_info_unit_size" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_temp_low_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="sans-serif"
                    android:text="@string/label_low"
                    android:textColor="#FFFFFF"
                    android:textSize="@dimen/weather_info_key_size" />

                <ImageView
                    android:id="@+id/tv_temp_low_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/currnet_low_b" />

                <TextView
                    android:id="@+id/tv_temp_low_val"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="sans-serif-light"
                    android:text="@{currentBean.observation.metric.temp_min_24hour}"
                    android:textColor="#FFFFFF"
                    android:textSize="@dimen/weather_info_value_size" />

                <TextView
                    android:id="@+id/tv_temp_low_unit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="sans-serif"
                    android:text="@string/label_temp_unit_celsius"
                    android:textColor="#99FFFFFF"
                    android:textSize="@dimen/weather_info_unit_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_preciptation_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="sans-serif"
                    android:text="@string/label_precipitation"
                    android:textColor="#FFFFFF"
                    android:textSize="@dimen/weather_info_key_size" />

                <ImageView
                    android:id="@+id/tv_preciptation_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/currnet_preciptation_b" />

                <TextView
                    android:id="@+id/tv_preciptation_val"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="sans-serif-light"
                    android:textColor="#000000"
                    android:textSize="@dimen/weather_info_value_size" />

                <TextView
                    android:id="@+id/tv_preciptation_unit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="sans-serif"
                    android:text="mm"
                    android:textColor="#99FFFFFF"
                    android:textSize="@dimen/weather_info_unit_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_humidity_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="sans-serif"

                    android:text="@string/label_humidity"
                    android:textSize="@dimen/weather_info_key_size" />

                <ImageView
                    android:id="@+id/tv_humidity_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/currnet_humidity_b" />

                <TextView
                    android:id="@+id/tv_humidity_val"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="sans-serif-light"

                    android:textSize="@dimen/weather_info_value_size" />

                <TextView
                    android:id="@+id/tv_humidity_unit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="sans-serif"
                    android:text="@string/label_humidity_unit"
                    android:textColor="#99FFFFFF"
                    android:textSize="@dimen/weather_info_unit_size" />
            </LinearLayout>
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/content_margin" />

    </LinearLayout>
</layout>